add working grayscale button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <br>
-    <button>Tons de Cinza</button>
-    <button>Gaussiano</button>
+    <button onclick="cinza()">Tons de Cinza</button>
+    <button onclick="gaussiano()">Gaussiano</button>
     <button>Sobel</button>
     <button>MODO4</button>
     <br>
