Add working gauss filter button improve visual (CSS)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,45 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+h1{
+  text-align: center;
+}
+p{
+  text-align: center;
+  /* margin-left: auto;
+  margin-right: auto;
+  width: 6em; */
+}
+#buttons{
+  text-align: center;
+}
+button{
+  width:180px;
+  height:50px;
+  background-color: #4C50AF;
+  border: none;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: purple;
+}
+button:active {
+  background-color: magenta;
+}
+
+#canvas{
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 640px;
+}
+.imgs{
+  text-align: center;
+}
 a {
   color: #00B7FF;
 }
