--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- LUCAS GOMES DA SILVA-->
 <html>
   <head>
     <title><%= title %></title>
@@ -6,17 +7,25 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to <%= title %></p> 
     <br>
-    <button onclick="cinza()">Tons de Cinza</button>
-    <button onclick="gaussiano()">Gaussiano</button>
-    <button>Sobel</button>
-    <button>MODO4</button>
+    <div id="buttons">
+      <button onclick="cinza()">Tons de Cinza</button>
+      <button onclick="gaussiano()">Gaussiano</button>
+      <button>Sobel</button>
+      <button >MODO4</button>
+    </div>
     <br>
     <br>
     <canvas id="canvas" width="640" height="480"></canvas>
     <br>
-    <img src='/images/gnu.jpg' width="100" height="75" onclick="drawimg(this)"/>
+    <div class="imgs">
+      <img src='/images/gnu.jpg' width="100" height="75" onclick="drawimg(this)"/>
+      <img src='/images/img-2.jpg' width="100" height="75" onclick="drawimg(this)"/>
+      <img src='/images/img-3.jpg' width="100" height="75" onclick="drawimg(this)"/>
+      <img src='/images/img-4.jpg' width="100" height="75" onclick="drawimg(this)"/>
+      <img src='/images/img-5.jpg' width="100" height="75" onclick="drawimg(this)"/>
+    </div>
 
     <br>
 
