--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,21 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p> 
+    <!-- <p>Welcome to <%= title %></p>  -->
     <br>
     <div id="buttons">
       <button onclick="cinza(0)">Tons de Cinza</button>
       <button onclick="gaussiano()">Gaussiano</button>
-      <button onclick="LoG()">Arestas 1</button>
-      <button onclick="LoGinv()">Arestas 2</button>
-      <button >MODO4</button>
+      <button onclick="Sobel()">Sobel(Arestas)</button>
     </div>
     <br>
     <div id="buttonslow">
-      <button onclick="LoG()">LoG</button>
-      <button onclick="LoGinv()">LoG inverso</button>
+      <button onclick="LoG()">LoG (Realce)</button>
+      <button onclick="corInv()">Inverter Cores</button>
     </div>
     <br>
     <br>
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <canvas id="canvas" width="800" height="600"></canvas>
     <br>
     <div class="imgs">
       <img src='/images/gnu.jpg' width="100" height="75" onclick="drawimg(this)"/>
